# pytools-typed-python-cli-starter

./: .gitignore  README.md  pyproject.toml
src/pytools/: __init__.py  cli.py
src/pytools/commands/: __init__.py  filestats.py  jsonpretty.py  ping.py
