[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytools"
version = "0.1.0"
description = "Typed Python CLI with file stats, JSON pretty-print, and HTTP ping"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
]

[project.scripts]
pytools = "pytools.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1.10",
    "ruff>=0.4",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
